--- a/week4.ipynb
+++ b/week4.ipynb
@@ -40,7 +40,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!unzip Digit.zip"
+        "!unzip Digi.zip"
       ],
       "metadata": {
         "id": "IA5yM1rXGz7P"
@@ -73,7 +73,7 @@
         "!unzip digit.zip -d /content/\n",
         "\n",
         "# Define dataset paths\n",
-        "train_dir = \"/content/DevanagariHandwrittenDigitDataset/Test\"\n",
+        "train_dir = \"/content/DevanagariHandwrittenDigitDataset/Train\"\n",
         "test_dir = \"/content/DevanagariHandwrittenDigitDataset/Test\"\n",
         "\n",
         "# Define image size\n",
@@ -136,97 +136,25 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "4"
-      ],
-      "metadata": {
-        "id": "JgBd6_mShAh6"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+        "from tensorflow.keras.layers import Flatten, Dense\n",
         "\n",
-        "# Apply Data Augmentation\n",
-        "datagen = ImageDataGenerator(\n",
-        "    rotation_range=10,\n",
-        "    width_shift_range=0.1,\n",
-        "    height_shift_range=0.1,\n",
-        "    zoom_range=0.1\n",
-        ")\n",
-        "\n",
-        "datagen.fit(x_train)\n",
-        "\n",
-        "# Build an Improved CNN Model\n",
+        "# Build Fully Connected Neural Network (FCN) Model\n",
         "model = Sequential([\n",
-        "    Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
-        "    BatchNormalization(),\n",
-        "    MaxPooling2D(2, 2),\n",
-        "\n",
-        "    Conv2D(64, (3, 3), activation='relu'),\n",
-        "    BatchNormalization(),\n",
-        "    MaxPooling2D(2, 2),\n",
-        "\n",
-        "    Conv2D(128, (3, 3), activation='relu'),\n",
-        "    BatchNormalization(),\n",
-        "    MaxPooling2D(2, 2),\n",
-        "\n",
-        "    Flatten(),\n",
-        "    Dense(128, activation='relu'),\n",
-        "    Dropout(0.3),  # Dropout to reduce overfitting\n",
-        "    Dense(10, activation='softmax')  # 10 classes\n",
+        "    Flatten(input_shape=(img_height, img_width, 1)),  # Flatten input image\n",
+        "    Dense(64, activation='sigmoid'),  # First hidden layer with 64 neurons\n",
+        "    Dense(128, activation='sigmoid'),  # Second hidden layer with 128 neurons\n",
+        "    Dense(256, activation='sigmoid'),  # Third hidden layer with 256 neurons\n",
+        "    Dense(10, activation='softmax')  # Output layer with 10 neurons for classification\n",
         "])\n",
         "\n",
-        "# Compile the Model\n",
-        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0005),\n",
-        "              loss='categorical_crossentropy',\n",
-        "              metrics=['accuracy'])\n",
+        "# Compile the model\n",
+        "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "# Callbacks for Better Training\n",
-        "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
-        "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=5, min_lr=1e-6)\n",
-        "\n",
-        "# Train the Model\n",
-        "history = model.fit(datagen.flow(x_train, y_train, batch_size=64),\n",
-        "                    validation_data=(x_test, y_test),\n",
-        "                    epochs=50,\n",
-        "                    callbacks=[early_stopping, reduce_lr])\n",
-        "\n",
-        "# Evaluate the Model\n",
-        "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
-        "print(f\"Test Accuracy: {test_acc * 100:.2f}%\")\n",
-        "\n",
-        "# Plot Training History\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "plt.figure(figsize=(12, 5))\n",
-        "\n",
-        "# Accuracy Plot\n",
-        "plt.subplot(1, 2, 1)\n",
-        "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
-        "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
-        "plt.xlabel('Epochs')\n",
-        "plt.ylabel('Accuracy')\n",
-        "plt.legend()\n",
-        "plt.title('Model Accuracy')\n",
-        "\n",
-        "# Loss Plot\n",
-        "plt.subplot(1, 2, 2)\n",
-        "plt.plot(history.history['loss'], label='Train Loss')\n",
-        "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
-        "plt.xlabel('Epochs')\n",
-        "plt.ylabel('Loss')\n",
-        "plt.legend()\n",
-        "plt.title('Model Loss')\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "plt.show()"
+        "# Print model summary\n",
+        "model.summary()"
       ],
       "metadata": {
         "id": "3T-TxiqzJhU3"
@@ -235,23 +163,64 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "5"
+        "# Compile the model\n",
+        "model.compile(optimizer='adam',  # Adam optimizer\n",
+        "              loss='categorical_crossentropy',  # Loss function for multi-class classification\n",
+        "              metrics=['accuracy'])  # Evaluation metric\n",
+        "\n",
+        "model.summary()"
       ],
       "metadata": {
-        "id": "7qAwItCShD9x"
-      }
+        "id": "_8GQiQhuD7sc"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Evaluate the model on the test dataset\n",
-        "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping\n",
         "\n",
-        "# Print the evaluation results\n",
-        "print(f\"Test Accuracy: {test_acc * 100:.2f}%\")\n",
-        "print(f\"Test Loss: {test_loss:.4f}\")"
+        "# Define callbacks\n",
+        "checkpoint_callback = ModelCheckpoint('best_model.h5', save_best_only=True, monitor='val_loss', mode='min', verbose=1)\n",
+        "early_stopping_callback = EarlyStopping(monitor='val_loss', patience=4, restore_best_weights=True, verbose=1)\n",
+        "\n",
+        "# Train the model\n",
+        "history = model.fit(x_train, y_train,\n",
+        "                    epochs=20,\n",
+        "                    batch_size=128,\n",
+        "                    validation_split=0.2,  # 20% of data used for validation\n",
+        "                    callbacks=[checkpoint_callback, early_stopping_callback],  # Include callbacks\n",
+        "                    verbose=1)\n",
+        "\n",
+        "# After training, you can evaluate the model on the test set\n",
+        "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
+        "print(f\"Test accuracy: {test_acc}\")\n",
+        "\n",
+        "# Optionally, plot training history (accuracy and loss)\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "\n",
+        "# Accuracy plot\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
+        "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+        "plt.title('Model Accuracy')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Accuracy')\n",
+        "plt.legend()\n",
+        "\n",
+        "# Loss plot\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.plot(history.history['loss'], label='Training Loss')\n",
+        "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+        "plt.title('Model Loss')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend()\n",
+        "\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "FYQVtpbsNn-l"
@@ -260,20 +229,14 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "6"
-      ],
-      "metadata": {
-        "id": "0gEzh6c4hGSJ"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# Save the trained model to an HDF5 file\n",
-        "model.save(\"handwritten_digit_model.h5\")\n",
-        "print(\"Model saved successfully!\")"
+        "# Evaluate the model on the test set\n",
+        "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
+        "\n",
+        "# Output the test accuracy and loss\n",
+        "print(f\"Test Loss: {test_loss:.4f}\")\n",
+        "print(f\"Test Accuracy: {test_acc * 100:.2f}%\")"
       ],
       "metadata": {
         "id": "jeapm26Gf57J"
@@ -284,19 +247,12 @@
     {
       "cell_type": "code",
       "source": [
+        "# Save the trained model to an HDF5 file\n",
+        "model.save(\"handwritten_digit_model.h5\")\n",
+        "print(\"Model saved successfully!\")\n",
         "# Load the saved model\n",
         "loaded_model = tf.keras.models.load_model(\"handwritten_digit_model.h5\")\n",
-        "print(\"Model loaded successfully!\")"
-      ],
-      "metadata": {
-        "id": "KM81dP6BhN1B"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(\"Model loaded successfully!\")\n",
         "# Evaluate the loaded model on the test dataset\n",
         "test_loss, test_acc = loaded_model.evaluate(x_test, y_test, verbose=2)\n",
         "\n",
@@ -305,19 +261,10 @@
         "print(f\"Loaded Model Test Loss: {test_loss:.4f}\")"
       ],
       "metadata": {
-        "id": "zyktLErqhafq"
+        "id": "KM81dP6BhN1B"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "7"
-      ],
-      "metadata": {
-        "id": "T_q29xfhhsTS"
-      }
     },
     {
       "cell_type": "code",
@@ -356,7 +303,7 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "1TRZqMFshtRq"
+        "id": "zyktLErqhafq"
       },
       "execution_count": null,
       "outputs": []
